--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title:
-email:
-description: > # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+title: Perfect Pitch
+email: perfectpitch.bw@gmail.com
+description: ""
+baseurl: "" 
+url: ""
 
 twitter_username:
-github_username:
+github_username: perfectpitchbw
 
 # Build settings
 markdown: kramdown
