--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: ""
 baseurl: "" 
 url: ""
 
-twitter_username:
+twitter_username: perfectpitch20
 github_username: perfectpitchbw
 
 # Build settings
