--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+baseurl: /
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-
+title: PitchLinkX
+email: perfectpitchbw@gmail.com
+description: "
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: fed136
@@ -14,9 +13,9 @@ color:
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: 
   pic: 1
-  position: Lead Designer
+  position: 
   social:
     - title: twitter
       url: #
@@ -25,9 +24,9 @@ people:
     - title: stack-overflow
       url: #
 
-- name: Larry Parker
+- name: 
   pic: 2
-  position: Lead Marketer
+  position: 
   social:
     - title: twitter
       url: #
@@ -36,9 +35,9 @@ people:
     - title: linkedin
       url: #
 
-- name: Diana Petersen
+- name: 
   pic: 3
-  position: Lead Developer
+  position: 
   social:
     - title: twitter
       url: #
@@ -50,20 +49,16 @@ people:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com/pitchlinkx
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
+    url:https://www.facebook.com/PitchLinkx-922416367841446/
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/pitchlinkx
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 
+  - line: 
 
 # Build settings
 markdown: kramdown
