--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: /
 # Site settings
 title: PitchLinkX
 email: perfectpitchbw@gmail.com
-description: "
+description: ""
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: fed136
