--- a/_config.yml
+++ b/_config.yml
@@ -1,65 +1,12 @@
-url: https://pitchlinkx.github.io
-baseurl: /
-
 # Site settings
-title: PitchLinkX
-email: perfectpitchbw@gmail.com
-description: ""
-# Color settings (hex-codes without the leading hash-tag)
-color:
-  primary: fed136
-  secondary: fec503  
-  secondary-dark: 333
+title:
+email:
+description: > # this means to ignore newlines until "baseurl:"
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "" # the base hostname & protocol for your site
 
-# Team names, titles and social links
-people:
-- name: 
-  pic: 1
-  position: 
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
-
-- name: 
-  pic: 2
-  position: 
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: linkedin
-      url: #
-
-- name: 
-  pic: 3
-  position: 
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: google-plus
-      url: #
-
-# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
-social:
-  - title: twitter
-    url: http://twitter.com/pitchlinkx
-  - title: facebook
-    url:https://www.facebook.com/PitchLinkx-922416367841446/
-  - title: github
-    url: http://github.com/pitchlinkx
-
-# Postal address (add as many lines as necessary)
-address:
-  - line: 
-  - line: 
+twitter_username:
+github_username:
 
 # Build settings
 markdown: kramdown
-permalink: pretty
