--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: PitchLinkX
 email: perfectpitchbw@gmail.com
-description: ""
+description: "PitchLinX Website"
 baseurl: ""
 url: ""
 
